@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Tue Jul 05 15:48:30 Paris, Madrid 2005
+ * Thu Jul 14 18:36:48 CEST 2005
  *
  *****************************************************************************/
 
@@ -17,6 +17,7 @@ namespace Mono.Cecil.Binary {
 
 	using System;
 	using System.IO;
+	using System.Text;
 
 	using Mono.Cecil;
 	using Mono.Cecil.Metadata;
@@ -199,6 +200,14 @@ namespace Mono.Cecil.Binary {
 
 		}
 
+		public void Visit (ImportAddressTable iat)
+		{
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
+				m_image.PEOptionalHeader.DataDirectories.IAT.VirtualAddress);
+
+			iat.HintNameTableRVA = new RVA (m_binaryReader.ReadUInt32 ());
+		}
+
 		public void Visit (CLIHeader header)
 		{
 			if (m_image.PEOptionalHeader.DataDirectories.CLIHeader == DataDirectory.Zero)
@@ -244,6 +253,40 @@ namespace Mono.Cecil.Binary {
 				m_image.CLIHeader.Metadata.VirtualAddress);
 			MetadataReader mrv = new MetadataReader (this);
 			m_image.MetadataRoot.Accept (mrv);
+		}
+
+		public void Visit (ImportTable it)
+		{
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
+				m_image.PEOptionalHeader.DataDirectories.ImportTable.VirtualAddress);
+
+			it.ImportAddressTable = new RVA (m_binaryReader.ReadUInt32 ());
+			it.DateTimeStamp = m_binaryReader.ReadUInt32 ();
+			it.ForwardChain = m_binaryReader.ReadUInt32 ();
+			it.Name = new RVA (m_binaryReader.ReadUInt32 ());
+			it.ImportAddressTable = new RVA (m_binaryReader.ReadUInt32 ());
+		}
+
+		public void Visit (ImportLookupTable ilt)
+		{
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
+				m_image.ImportTable.ImportLookupTable.Value);
+
+			ilt.HintNameRVA = new RVA (m_binaryReader.ReadUInt32 ());
+		}
+
+		public void Visit (HintNameTable hnt)
+		{
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
+				m_image.ImportAddressTable.HintNameTableRVA.Value);
+
+			hnt.Hint = m_binaryReader.ReadUInt16 ();
+			hnt.RuntimeMain = Encoding.ASCII.GetString (m_binaryReader.ReadBytes (11));
+			m_binaryReader.ReadByte ();
+			hnt.RuntimeLibrary = Encoding.ASCII.GetString (m_binaryReader.ReadBytes (11));
+			m_binaryReader.ReadByte ();
+
+			// ep + rva
 		}
 
 		public void Terminate (Image img)
